# ImageProcessor6

./: CMakeLists.txt  OCR文字识别程序.pptx  README.md  application.cpp  application.h  array.h  config.h  event.h  image.h  images.h  lab.h  main.cpp  math.h  matrix.h  stream.h  tesseract.h  translate.cpp  translate.h  utils.h  数字媒体技术报告模板.doc
